feat: add create question subscriber route
